fix background image name + position use html semantic elements add text outline for better visibility fix JS

--- a/styles.css
+++ b/styles.css
@@ -3,33 +3,56 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
+    min-height: 100vh;
     text-align: center;
-    background-image: url('/laptop.jpg');
+    background-image: url('background.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     color: white;
     font-family: Helvetica, sans-serif;
-}
-#main-content {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#main-content >*{
+#check{
+    cursor: pointer;
+}
+
+#check:active{
+    background-color: lightblue;
+}
+
+p,h1{
+    color: white;
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+
+h1{
+    font-size: 48px;
+}
+
+p{
+    font-size: 24px;
+}
+
+main >:not(:first-child){
     margin-top: 10px;
 }
 
-#guess >*{
+section >*{
     padding: 10px;
     border-radius: 5px;
     border: none;
 }
 
-input:focus {
-    background-color: lightblue;
-}
+input:focus { background-color: lightblue; }
 input:focus { outline: none; }
